# WEB_HW_9

./: .gitignore  README.md  config_interactions.py  config_template.ini  file_interactions.py  main.py  pyproject.toml
db/: db_connect.py  load_data.py  models.py
rabbit/: producer.py  rabbit_connect.py
spiders/: author.py  quote.py
